fix(on-324): hide overflow

--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -233,6 +233,8 @@
 .sb-sidebar-link-inner {
   display: flex;
   align-items: center;
+  overflow: hidden;
+  min-width: 24px;
 }
 
 // modifiers
